force-app/main/default/objects/OrderItem/fields/Billed_For_Account__c.field-meta.xml
<CustomField>
    <fullName>Billed_For_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Billed For Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>