force-app/main/default/objects/OrderItem/fields/LP_Membership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LP_Membership_Start_Date__c</fullName>
    <inlineHelpText>Only fill in this field when the &apos;Billed For Account&apos; is a LP and Paid By a CP.</inlineHelpText>
    <label>LP Membership Start Date</label>
    <type>Date</type>
</CustomField>